[gd_scene load_steps=8 format=3 uid="uid://dfnikybi6jq2r"]

[ext_resource type="Script" path="res://scenes/myco.gd" id="1_qei3q"]
[ext_resource type="Texture2D" uid="uid://cypit7l2enax4" path="res://graphics/rhizomorphic.png" id="2_6bpe3"]
[ext_resource type="Texture2D" uid="uid://bd8so3hnylm4b" path="res://graphics/health-back.png" id="3_mc2st"]
[ext_resource type="Texture2D" uid="uid://cqcp3xd8ymlh5" path="res://graphics/mushroom_32.png" id="3_pqgni"]
[ext_resource type="Texture2D" uid="uid://gfa5wyo71535" path="res://graphics/health-over.png" id="4_ukck8"]
[ext_resource type="Texture2D" uid="uid://bt73bfc1f07cl" path="res://graphics/health-progress.png" id="5_idsyn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl0lh"]
size = Vector2(16, 29)

[node name="Myco" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_qei3q")

[node name="MycoSprite" type="Sprite2D" parent="."]
position = Vector2(1, 16)
texture = ExtResource("2_6bpe3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_pqgni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_yl0lh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 19.0
offset_top = -4.0
offset_right = 24.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_mc2st")
texture_over = ExtResource("4_ukck8")
texture_progress = ExtResource("5_idsyn")
tint_progress = Color(0, 0.819023, 0.247507, 1)
metadata/_edit_use_anchors_ = true

[node name="Nbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 13.0
offset_top = -4.0
offset_right = 18.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_mc2st")
texture_over = ExtResource("4_ukck8")
texture_progress = ExtResource("5_idsyn")
tint_progress = Color(0, 0.819023, 0.247507, 1)
metadata/_edit_use_anchors_ = true

[node name="Kbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 25.0
offset_top = -4.0
offset_right = 30.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_mc2st")
texture_over = ExtResource("4_ukck8")
texture_progress = ExtResource("5_idsyn")
tint_progress = Color(0, 0.819023, 0.247507, 1)
metadata/_edit_use_anchors_ = true

[node name="Rbar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 31.0
offset_top = -4.0
offset_right = 36.0
offset_bottom = 25.0
max_value = 10.0
value = 5.0
fill_mode = 3
texture_under = ExtResource("3_mc2st")
texture_over = ExtResource("4_ukck8")
texture_progress = ExtResource("5_idsyn")
tint_progress = Color(0, 0.819023, 0.247507, 1)
metadata/_edit_use_anchors_ = true

[node name="GrowthTimer" type="Timer" parent="."]
autostart = true

[node name="ActionTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
